--- a/views/partials/head1.pug
+++ b/views/partials/head1.pug
@@ -7,7 +7,7 @@
                 p 0
         a.navbar-brand(href='/')
             img.logo(src='/images/kiw.jpeg')
-            |    Glovo241
+            |    Ogooue Delivery
         button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
             span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
