--- a/views/clientLayout.pug
+++ b/views/clientLayout.pug
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css', integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh', crossorigin='anonymous')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+    link(rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css")
   include partials/head
   body
 
@@ -25,18 +26,52 @@ html
     block content
 
 
-script(src='/javascripts/file.js')
-script(src='/javascripts/jquery-3.5.1.min.js')
-script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
-script( src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.27/jquery.autocomplete.min.js")
+script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
+script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous")
 script.
 
-    $( document ).ready(function() {
-     
+    let cartId = `#{cart}`
+
+    $(function() {
+        $.get('/getCart/'+cartId,function(data,status){
+            console.log('getting')
+            if(status=='success'){
+                console.log('data:')
+                console.log(data)
+                $('#shopCartNumber').html(data.number)
+            }else{
+                console.log('could not get number')
+            }})
+
+        $('#rayon').click(function(){
+            let div = $('#displayCategories')
+            if(div.html()!=''){
+                div.html('')
+                div.removeClass()
+                return 'done'
+            }
+            $.get('/api/getCat/Alimentaire',function(data,status){
+                if(status == 'success'){
+                    console.log(data)
+                    div.addClass('selection')
+                    div.html('<p><b> Rayons </b></p><br>')
+                    let newDiv = document.createElement('div')
+                    newDiv.className = 'flex-container'
+                    data.subcats.forEach((item,i)=>{
+                        newDiv.innerHTML += `<a href='/category/Alimentaire/${item._id}'>
+                                            <div class='box'>
+                                                <p>${item.name}</p>
+                                            </div>
+                                          </a>`
+                    })
+                    div.append(newDiv)
+                }
+            })
+        })
+
     });
 
-    cartId = `#{cart}`
-    getNumberItem(`${cartId}`)
+
 
 
 include partials/footer
