--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -3,9 +3,9 @@
         .title
             a.navbar-brand(href='/')
                 img.logo(src='/images/kiw.jpeg')
-                |    Glovo241
+                |    Ogooue Delivery
         .rayon
-            button.btn-primary(type='button' onclick='fillDisplayCategories()') Rayons
+            button#rayon.btn-primary(type='button') Rayons
 
         .shoppingCart
             a(href='/cart')
