--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -25,3 +25,6 @@
             input(type='text', placeholder='Recherche..', name='search')
             button(type='submit')
                 i.fa.fa-search
+
+
+.scrollmenu#catBar
