--- a/views/signin.pug
+++ b/views/signin.pug
@@ -2,7 +2,7 @@ extends clientLayout
 
 block content
 
-    .main
+    #main(style='text-align:center')
         .signin
             h3 Se Connecter
             form(action = "/signin" method = "POST")
