--- a/views/signup.pug
+++ b/views/signup.pug
@@ -13,7 +13,11 @@ block content
             br
             input(name = "password" type = "password" required placeholder = "Mot de Passe" minlength=7)
             br
-            textarea(name='address' placeholder='Commune\nVille\nQuartier')
+            input(name = "ville" type = "text" required placeholder = "Ville" )
+            br
+            input(name = "address" type = "text" required placeholder = "Addresse")
+            br
+            input(name = "Nomdulieu" type = "text" required placeholder = "Nom Du Lieu")
             br
             button(type = "Submit") Sign me up!
             br
